chore(lint): fix linter warnings
