# docs/swagger.yaml
@@ -548,107 +548,6 @@ paths:
       summary: Get auditorium schedule
       tags:
       - Auditoriums
-  /api/v1/schedule/auditoriums/{auditorium_id}:
-    get:
-      description: Get auditorium by auditorium_id
-      parameters:
-      - description: auditorium_id
-        example: 12
-        in: path
-        name: auditorium_id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/github_com_schedule-rsreu_schedule-api_internal_models.Auditorium'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/echo.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/echo.HTTPError'
-      summary: Get auditorium
-      tags:
-      - Auditoriums
-  /api/v1/schedule/auditoriums/list:
-    get:
-      description: Get auditoriums list by building_id (if building_id is 0 or not
-        provided, returns all auditoriums)
-      parameters:
-      - description: building_id
-        example: 1
-        in: query
-        name: building_id
-        type: integer
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/github_com_schedule-rsreu_schedule-api_internal_models.Auditorium'
-            type: array
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/echo.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/echo.HTTPError'
-      summary: Get auditoriums list
-      tags:
-      - Auditoriums
-  /api/v1/schedule/buildings:
-    get:
-      description: Get all buildings list
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/github_com_schedule-rsreu_schedule-api_internal_models.Building'
-            type: array
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/echo.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/echo.HTTPError'
-      summary: Get buildings list
-      tags:
-      - Buildings
-  /api/v1/schedule/buildings/{id}:
-    get:
-      description: Get building by id
-      parameters:
-      - description: building id
-        example: 1
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/github_com_schedule-rsreu_schedule-api_internal_models.Building'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/echo.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/echo.HTTPError'
-      summary: Get building
-      tags:
-      - Buildings
   /api/v1/schedule/courses:
     get:
       description: Курсы факультета
